# flask-admin-cli

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: flask-admin-cli-tests.yml  test_and_coverage.yml
docs/: api.md  cli.md  index.md
flask_admin_cli/: __init__.py  api.py  cli.py
tests/: tests_api.py  tests_cli.py
