[tool.poetry]
name = "flask-admin-cli"
version = "0.2.0"
description = "A CLI application to create Flask Admin instances."
authors = ["Mario Hernandez <mariofix@proton.me>"]
readme = "README.md"
packages = [{include = "flask_admin_cli"}]
license = "MIT"
homepage = "https://mariofix.github.io/flask-admin-cli/"
repository = "https://github.com/mariofix/flask-admin-cli"
documentation = "https://mariofix.github.io/flask-admin-cli/"
keywords = ["flask-admin", "cli", "flask"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flask",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.scripts]
flask-admin-cli = "flask_admin_cli.cli:the_cli"

[tool.poetry.dependencies]
python = "^3.8.5"
click = "^8.1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
mkdocs = {version = "^1.4.3", extras = ["i18n"]}
mkdocs-material = "^9.0.2"
mkdocstrings = {extras = ["python"], version = ">=0.19.1,<0.23.0"}
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
